--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/trip?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=60480000
