--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/trip?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/test_trip?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.sql.init.mode=always
@@ -11,3 +11,5 @@ jwt.get.token.uri=/authenticate
 jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=60480000
+server.port = 8090
+
