--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,20 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+
+
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
@@ -63,6 +77,8 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+
+
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
