--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=60480000
 server.port = 8090
 
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
