--- a/pom.xml
+++ b/pom.xml
@@ -27,18 +27,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>3.0.0</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.6</version>
 		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-
-
 
 		<dependency>
 			<groupId>com.mysql</groupId>
@@ -77,8 +69,6 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-
-
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
